some minor cleanup & a possible bugfix